--- a/Course 2/solutions/network-airah.yml
+++ b/Course 2/solutions/network-airah.yml
@@ -121,13 +121,13 @@ Resources:
   NatGateway1:
     Type: AWS::EC2::NatGateway
     Properties:
-      AllocationId: !GetAtt NatGateway1EIP.AllocationId
+      AllocationId: !GetAtt MyEIP1.AllocationId
       SubnetId: !Ref PublicSubnet1
 
   NatGateway2:
     Type: AWS::EC2::NatGateway
     Properties:
-      AllocationId: !GetAtt NatGateway2EIP.AllocationId
+      AllocationId: !GetAtt MyEIP2.AllocationId
       SubnetId: !Ref PublicSubnet2
 
   PublicRouteTable:
