previous fixes course 2

--- a/Course 2/solutions/server-airah.yml
+++ b/Course 2/solutions/server-airah.yml
@@ -192,6 +192,11 @@ Resources:
           Values: [/]
 
 Outputs:
+  PrivateSubnetsSecurityGroup:
+    Description: security group for the private subnets
+    Value: !Ref WebServerSG
+    Export:
+      Name: !Sub ${EnvironmentName}-PR-Security-Group
   LoadBalancerURL:
     Description: load balancer url
     Value: 
