--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,48 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+orbs:
+  aws-cli: circleci/aws-cli@3.1
+
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  save-aws-ec2-addresses:
+    executor: aws-cli/default
+    working_directory: ~/project
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: UDACITY_ACCESS_KEY
+          aws-secret-access-key: UDACITY_SECRET
+          aws-session-token: UDACITY_SESSION
+          aws-region: us-east-1
+      - run:
+          name: AWS testing
+          command: |
+            echo "setting up aws cli?"
+      - run:
+          name: fetch IP addresses of instances
+          command: |
+            echo "[all]" > inventory.txt
+            aws ec2 describe-instances --query "Reservations[*].Instances[*].PublicIpAddress" --filters "Name=tag:Project, Values=udacity" --output text >> inventory.txt
+      - persist_to_workspace:
+          root:  ./
+          paths:
+            - inventory.txt
+  
+  print-result:
     docker:
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    working_directory: ~/project
     steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - attach_workspace:
+          at: ./workspace
+      - run: 
+          command: |
+            echo "now attaching saved workspace"
+            cat ./workspace/inventory.txt
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  aws-ansible-workflow:
     jobs:
-      - say-hello
+      - save-aws-ec2-addresses
+      - print-result:
+          requires:
+            - save-aws-ec2-addresses
