--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,10 @@ jobs:
     executor: aws-cli/default
     working_directory: ~/project
     steps:
-      - aws-cli/setup:
-          aws-access-key-id: UDACITY_ACCESS_KEY
-          aws-secret-access-key: UDACITY_SECRET
-          aws-session-token: UDACITY_SESSION
-          aws-region: us-east-1
+     - aws-cli/setup:
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_SECRET_KEY
+          aws-region: AWS_REGION
       - run:
           name: AWS testing
           command: |
