--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name: Deploy Cloudformation stack
           command: |
-            aws cloudformation deploy --stack-name StackViaCircleCI --template-file ./template.yml
+            aws cloudformation deploy --stack-name StackViaCircleCI --template-file template.yml
 workflows:
   workflow-1:
     jobs:
