--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,11 @@ jobs:
       - run:
           name: Deploy Cloudformation stack
           command: |
-            aws cloudformation deploy --stack-name StackViaCircleCI --template-file template.yml
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --region us-east-1
+
 workflows:
   workflow-1:
     jobs:
