--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,7 @@ jobs:
       - run:
           name: Deploy Cloudformation stack
           command: |
-            aws cloudformation deploy \
-              --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-              --region us-east-1
+            pwd && ls -a
 
 workflows:
   workflow-1:
