--- a/template.yml
+++ b/template.yml
@@ -6,15 +6,12 @@ Parameters:
   VpcID:
     Description: VPC ID
     Type: String
-    Default: vpc-0689b8e3d276ae985
   SubnetID:
     Description: subnet for the instance
     Type: String
-    Default: subnet-0f96bedcbd159d4af
   ImageID:
     Description: AMI ID
     Type: String
-    Default: ami-052efd3df9dad4825
 
 Resources:
   WebServerSG:
@@ -42,17 +39,17 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName} web servers security group
-      VpcId: vpc-0689b8e3d276ae985
+      VpcId: !Ref VpcID
 
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
-      ImageId: ami-052efd3df9dad4825
+      ImageId: ImageID
       NetworkInterfaces:
         - AssociatePublicIpAddress: "true"
           DeviceIndex: "0"
           GroupSet:
             - !Ref WebServerSG
-          SubnetId: subnet-0f96bedcbd159d4af
+          SubnetId: !Ref SubnetID
       KeyName: course3
