--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: Deploy Cloudformation stack
           command: |
-            aws cloudformation deploy --template-file template.yml --parameter-overrides file://./../template.json --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
+            aws cloudformation deploy --template-file template.yml --parameter-overrides file://template.json --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
 
 workflows:
   workflow-1:
